app/assets/stylesheets/login/login.css
.login-form {
  display: flex;  
  flex-direction: column;
  align-content: center; 
  background-color: rgba(28, 28, 28, 0.8);
  color: #1a73e8;
  width: 450px;
  height: 500px;
  box-sizing: border-box;
  border: 1px solid grey;
  border-radius: 5px;  
  padding: 10px;
  text-align: center;
  margin: 0 auto;
    position: relative;
  bottom: -100px;
  
}

.password-box {
  display: flex;
  flex-direction: column;
  bottom: -200px;
  position: relative;
}

.password-container {
  display: flex;
  /* position: relative; */
  justify-content: center;
  top: 100px; 
}

.login-input {
  display: flex; 
  flex-direction: column; 
  color: black;
  background-color:grey;  
  width: 380px;
  height: 50px;
  box-sizing: border-box;
  border: 1px solid grey;
  border-radius: 5px;
  justify-content: space-between;
  padding: 10px;
  margin: 0 auto;
}

/* .create-account {


} */

.login-submit {
  display: flex; 
  font-family: 'Open Sans', sans-serif;
  font-size: 15px;
  text-align: center;
  flex-direction: column; 
  background-color:rgb(68, 103, 219);  
  color: white;
  width: 80px;
  height: 50px;
  box-sizing: border-box;
  border: 1px solid grey;
  border-radius: 5px;
  justify-content: space-between;
  padding: 10px;
  margin: 0 auto;
  position: relative;
  left: 140px;
  bottom: -305px;
}

